<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rui.tipcalcuator.MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/RelativeLayout">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5"
        android:id="@+id/GridLayout"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/amount"
            android:id="@+id/amountTextView"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="right"
            android:labelFor="@+id/amountEditText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/amountEditText"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/GridLayout"
            android:layout_alignStart="@+id/GridLayout"
            android:layout_marginLeft="52dp"
            android:layout_marginStart="52dp"
            android:layout_row="0"
            android:layout_column="1"
            android:digits="0123456789"
            android:maxLength="6"
            android:padding="@dimen/textview_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/custom_tip_percentage"
            android:id="@+id/customPercentText"
            android:layout_below="@+id/GridLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="right" />

        <SeekBar
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/customTipSeekBar"
            android:layout_row="1"
            android:layout_column="1"
            android:indeterminate="false"
            android:max="30"
            android:progress="18"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/GridLayout"
            android:layout_alignRight="@+id/GridLayout"
            android:layout_alignEnd="@+id/GridLayout"
            android:layout_marginRight="53dp"
            android:layout_marginEnd="53dp"
            android:layout_column="1"
            android:layout_row="2"
            android:id="@+id/percentLinearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fifteen_percent"
                android:id="@+id/percent15TextView"
                android:layout_below="@+id/GridLayout"
                android:layout_alignRight="@+id/GridLayout"
                android:layout_alignEnd="@+id/GridLayout"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/eighteen_percent"
                android:id="@+id/percentCustomTextView"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tip"
            android:id="@+id/tipTextView"
            android:layout_below="@+id/GridLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical|right" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tipTextView"
            android:layout_toEndOf="@+id/tipTextView"
            android:id="@+id/tipLinerLayout"
            android:layout_below="@+id/GridLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tip15TextView"
                android:background="@android:color/holo_orange_light"
                android:autoText="false"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:width="0dp"
                android:padding="@dimen/textview_padding"
                android:layout_margin="@dimen/textview_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tipCustomTextView"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:width="0dp"
                android:padding="@dimen/textview_padding"
                android:background="@android:color/holo_orange_light"
                android:layout_margin="@dimen/textview_padding" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/total"
            android:id="@+id/totalTextView"
            android:layout_below="@+id/GridLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical|right" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_row="4"
            android:layout_column="1"
            android:id="@+id/totalLinearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/total15TextView"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:width="0dp"
                android:padding="@dimen/textview_padding"
                android:layout_margin="@dimen/textview_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/totalCustomTextView"
                android:nestedScrollingEnabled="false"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:width="0dp"
                android:padding="@dimen/textview_padding"
                android:background="@android:color/holo_orange_light"
                android:layout_margin="@dimen/textview_padding" />
        </LinearLayout>

    </GridLayout>

</RelativeLayout>
